--- a/gui/projects_dialog.ui
+++ b/gui/projects_dialog.ui
@@ -10,6 +10,12 @@
     <height>299</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>Manage Projects</string>
   </property>
