removed need to add iep gui dir to sys.path, full import path of modules for promoted widget in .ui files can be specified in that ui file as gui/file.h

--- a/gui/projects_dialog.ui
+++ b/gui/projects_dialog.ui
@@ -163,7 +163,7 @@
   <customwidget>
    <class>DraggableList</class>
    <extends>QListView</extends>
-   <header>draggablelist.h</header>
+   <header>gui/draggablelist.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
